--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
         .tab-btn[data-tab="4"] {
-            background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
+            background: linear-gradient(135deg, #f7b733 0%, #fc4a1a 100%);
         }
         .tab-content {
             background: white;
